# IntegratorXX

./: CMakeLists.txt  README.md
.github/workflows/: build_and_test_compiler_zoo.yml  clang_format_lint.yaml  cmake.yml
.github/workflows/scripts/: compiler_setup.sh
cmake/: IntegratorXXConfig.cmake.in
include/integratorxx/: aldrichs.hpp  batch.hpp  c_api.h  eulermaclaurin.hpp  gausscheby1.hpp  gausscheby2.hpp  gausslegendre.hpp  integrator.hpp  knowles.hpp  lebedev.hpp  quadrature.hpp  type_traits.hpp  types.hpp
include/integratorxx/atom_partitioning/: cell_weights.hpp
include/integratorxx/atomic_densities/: SlaterAtomicShell.hpp  k00heavy.cpp  k00heavy.hpp  k99l.cpp  k99l_anion.cpp  k99l_anion.hpp  k99l_cation.cpp  k99l_cation.hpp  k99l_neutral.cpp  k99l_neutral.hpp
include/integratorxx/batch/: batching_util.hpp  hilbert_partition.hpp  octree_partition.hpp  spherical_micro_batcher.hpp
include/integratorxx/composite_quadratures/: product_quadrature.hpp  pruned_spherical_quadrature.hpp  spherical_quadrature.hpp  sub_quadrature.hpp
include/integratorxx/deprecated/: ahlrichs.hpp  aldrichs.hpp  batch.hpp  eulermaclaurin.hpp  gausscheby1.hpp  gausscheby2.hpp  gausslegendre.hpp  integrator.hpp  knowles.hpp  lebedev.hpp  quadrature.hpp
include/integratorxx/deprecated/lebedev/: lebedev_110.hpp  lebedev_1202.hpp  lebedev_14.hpp  lebedev_1454.hpp  lebedev_146.hpp  lebedev_170.hpp  lebedev_1730.hpp  lebedev_194.hpp  lebedev_2030.hpp  lebedev_230.hpp  lebedev_2354.hpp  lebedev_26.hpp  lebedev_266.hpp  lebedev_2702.hpp  lebedev_302.hpp  lebedev_3074.hpp  lebedev_3470.hpp  lebedev_350.hpp  lebedev_38.hpp  lebedev_3890.hpp  lebedev_4334.hpp  lebedev_434.hpp  lebedev_4802.hpp  lebedev_50.hpp  lebedev_5294.hpp  lebedev_5810.hpp  lebedev_590.hpp  lebedev_6.hpp  lebedev_74.hpp  lebedev_770.hpp  lebedev_86.hpp  lebedev_974.hpp  lebedev_grids.hpp
include/integratorxx/deprecated/util/: bound_transform.hpp
include/integratorxx/generators/: radial_factory.hpp  radial_generator.hpp  s2_factory.hpp  s2_generator.hpp  spherical_factory.hpp
include/integratorxx/generators/impl/: impl.hpp  pruned_grid.hpp  radial_factory.hpp  radial_types.hpp  robust_pruning.hpp  s2_factory.hpp  s2_types.hpp  treutler_pruning.hpp  unpruned_grid.hpp
include/integratorxx/lebedev/: lebedev_110.hpp  lebedev_1202.hpp  lebedev_14.hpp  lebedev_1454.hpp  lebedev_146.hpp  lebedev_170.hpp  lebedev_1730.hpp  lebedev_194.hpp  lebedev_2030.hpp  lebedev_230.hpp  lebedev_2354.hpp  lebedev_26.hpp  lebedev_266.hpp  lebedev_2702.hpp  lebedev_302.hpp  lebedev_3074.hpp  lebedev_3470.hpp  lebedev_350.hpp  lebedev_38.hpp  lebedev_3890.hpp  lebedev_4334.hpp  lebedev_434.hpp  lebedev_4802.hpp  lebedev_50.hpp  lebedev_5294.hpp  lebedev_5810.hpp  lebedev_590.hpp  lebedev_6.hpp  lebedev_74.hpp  lebedev_770.hpp  lebedev_86.hpp  lebedev_974.hpp
include/integratorxx/quadratures/: ahrens_beylkin.hpp  all.hpp  copy_grid.hpp  create_array.hpp  delley.hpp  gausscheby1.hpp  gausscheby2.hpp  gausscheby2_mod.hpp  gausscheby3.hpp  gausschebyshev1.hpp  gausschebyshev2.hpp  gausschebyshev2modified.hpp  gausschebyshev3.hpp  gausslegendre.hpp  gausslobatto.hpp  lebedev_laikov.hpp  mhl.hpp  muraknowles.hpp  primitive.hpp  radial.hpp  radial_transform.hpp  s2.hpp  treutlerahlrichs.hpp  treutleraldrichs.hpp  uniform.hpp  womersley.hpp
include/integratorxx/quadratures/ahrens_beylkin/: ahrens_beylkin_1032.hpp  ahrens_beylkin_1272.hpp  ahrens_beylkin_132.hpp  ahrens_beylkin_1392.hpp  ahrens_beylkin_1632.hpp  ahrens_beylkin_1812.hpp  ahrens_beylkin_192.hpp  ahrens_beylkin_2172.hpp  ahrens_beylkin_2232.hpp  ahrens_beylkin_2832.hpp  ahrens_beylkin_3012.hpp  ahrens_beylkin_312.hpp  ahrens_beylkin_3312.hpp  ahrens_beylkin_3432.hpp  ahrens_beylkin_3492.hpp  ahrens_beylkin_3612.hpp  ahrens_beylkin_3792.hpp  ahrens_beylkin_4332.hpp  ahrens_beylkin_4692.hpp  ahrens_beylkin_492.hpp  ahrens_beylkin_4992.hpp  ahrens_beylkin_5232.hpp  ahrens_beylkin_5472.hpp  ahrens_beylkin_552.hpp  ahrens_beylkin_6192.hpp  ahrens_beylkin_6312.hpp  ahrens_beylkin_732.hpp  ahrens_beylkin_7512.hpp  ahrens_beylkin_792.hpp
include/integratorxx/quadratures/delley/: delley_110.hpp  delley_14.hpp  delley_1454.hpp  delley_1730.hpp  delley_194.hpp  delley_2030.hpp  delley_2354.hpp  delley_26.hpp  delley_2702.hpp  delley_302.hpp  delley_434.hpp  delley_590.hpp  delley_770.hpp  delley_974.hpp  delley_grids.hpp
include/integratorxx/quadratures/lebedev_laikov/: lebedev_laikov_110.hpp  lebedev_laikov_1202.hpp  lebedev_laikov_14.hpp  lebedev_laikov_1454.hpp  lebedev_laikov_146.hpp  lebedev_laikov_170.hpp  lebedev_laikov_1730.hpp  lebedev_laikov_194.hpp  lebedev_laikov_2030.hpp  lebedev_laikov_230.hpp  lebedev_laikov_2354.hpp  (+21 more)
include/integratorxx/util/: bound_transform.hpp  constants.hpp  factorial.hpp  gamma.hpp  lambert_w.hpp  legendre.hpp  pow.hpp  pow_2.hpp  type_traits.hpp
include/integratorxx_new/: quadrature.hpp  types.hpp
include/integratorxx_new/batch/: spherical_micro_batcher.hpp
include/integratorxx_new/composite_quadratures/: product_quadrature.hpp  spherical_quadrature.hpp
include/integratorxx_new/quadratures/: gausscheby1.hpp  gausscheby2.hpp  gausslegendre.hpp  lebedev_laikov.hpp  mhl.hpp  muraknowles.hpp  treutleraldrichs.hpp  uniform.hpp
include/integratorxx_new/util/: bound_transform.hpp
src/: CMakeLists.txt  radial_factory.cxx  radial_types.hpp  s2_factory.cxx  s2_types.hpp  spherical_factory.cxx
src/c_api/: CMakeLists.txt  c_angular.cxx  c_api.c  c_api_util.hpp  c_internal.h  c_misc.cxx  c_primitive.cxx  c_radial.cxx
test/: 1d_quadratures.cxx  CMakeLists.txt  batch.cxx  c_api.cxx  composite_quadratures.cxx  gausschebyshev1.cxx  gausschebyshev2.cxx  gausslegendre.cxx  gausslobatto.cxx  generate_quadrature_tests.py  lib_impl.cxx  muraknowles.cxx  quad_matcher.cxx  quad_matcher.hpp  quadrature_manipulation.cxx  range_sandbox.cxx  ranges_working.cxx  spherical_generator.cxx  test.cxx  test_functions.hpp  util.cxx
test/cmake/discovery/: CMakeLists.txt  integratorxx_link_tester.cxx
test/cmake/subproject/: CMakeLists.txt  integratorxx_link_tester.cxx
(+218 files in other folders)
